--- a/test.html
+++ b/test.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Take a Test</title>
-<link rel="stylesheet" href="css/style.css">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
 body {
@@ -12,20 +11,22 @@ body {
     text-align: center;
     margin: 0;
     padding: 0;
-    background: linear-gradient(135deg, #f7f7f7, #e0e0e0);
+    background: linear-gradient(135deg, #0f0f0f, #1c1c1c);
+    color: #eee;
 }
 
 .container {
     margin: 60px auto;
     max-width: 700px;
-    background: #fff;
+    background: #1a1a1a;
     padding: 40px 30px;
-    border-radius: 16px;
-    box-shadow: 0 8px 25px rgba(0,0,0,0.15);
+    border-radius: 20px;
+    box-shadow: 0 10px 40px rgba(0,0,0,0.5);
+    border: 2px solid #444;
 }
 
 h1, h2 {
-    color: #6a11cb;
+    color: #ffd700;
     margin-bottom: 20px;
 }
 
@@ -33,6 +34,7 @@ h1, h2 {
     font-size: 20px;
     margin-bottom: 30px;
     min-height: 60px;
+    color: #ccc;
 }
 
 #answers-container {
@@ -48,30 +50,31 @@ h1, h2 {
     border-radius: 12px;
     font-weight: 600;
     cursor: pointer;
-    color: white;
-    background: linear-gradient(135deg, #ff512f, #dd2476);
+    color: #111;
+    background: linear-gradient(135deg, #ffd700, #e6c200);
     transition: transform 0.3s, box-shadow 0.3s;
 }
 
 #answers-container button:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 8px 20px rgba(0,0,0,0.25);
+    transform: translateY(-3px) scale(1.02);
+    box-shadow: 0 8px 25px rgba(0,0,0,0.5);
 }
 
 #next-btn {
     margin-top: 25px;
     padding: 12px 25px;
-    background: #2575fc;
-    color: white;
+    background: linear-gradient(135deg, #c0c0c0, #a9a9a9); /* silver */
+    color: #111;
     border: none;
     border-radius: 12px;
     font-weight: 600;
     cursor: pointer;
-    transition: transform 0.3s;
+    transition: transform 0.3s, box-shadow 0.3s;
 }
 
 #next-btn:hover {
     transform: scale(1.05);
+    box-shadow: 0 8px 25px rgba(0,0,0,0.5);
 }
 
 /* Fade in animation for questions */
