--- a/index.html
+++ b/index.html
@@ -6,27 +6,59 @@
 <title>AnthonyTheSabakumono</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
+/* ==== Global Dark Theme ==== */
 body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
-    background: linear-gradient(135deg, #0f0f0f, #1c1c1c);
     color: #eee;
+    background: linear-gradient(135deg, #0f0f0f, #1c1c1c);
+    overflow-x: hidden;
+    position: relative;
+}
+
+/* ==== Background Logo Layer ==== */
+body::before {
+    content: "";
+    position: fixed;
+    top: 0; left: 0; right: 0; bottom: 0;
+    background: url('logo.jpeg') center center/contain no-repeat;
+    opacity: 0.08; /* faint visibility */
+    filter: blur(4px);
+    z-index: 0;
+}
+
+/* ==== Foreground Blur Overlay ==== */
+body::after {
+    content: "";
+    position: fixed;
+    top: 0; left: 0; right: 0; bottom: 0;
+    backdrop-filter: blur(8px);
+    background: rgba(0, 0, 0, 0.4);
+    z-index: 1;
+}
+
+/* ==== Page Content ==== */
+header, main, footer {
+    position: relative;
+    z-index: 2;
 }
 
 header {
-    background: linear-gradient(90deg, #222, #111);
+    background: rgba(20, 20, 20, 0.8);
     color: #ffd700;
     padding: 60px 20px;
     text-align: center;
     box-shadow: 0 4px 20px rgba(0,0,0,0.5);
-    border-bottom: 2px solid #444;
+    border-bottom: 1px solid #444;
+    border-radius: 0 0 20px 20px;
+    backdrop-filter: blur(6px);
 }
 
 header h1 {
     font-size: 3em;
     margin: 0 0 10px 0;
-    text-shadow: 2px 2px 10px rgba(0,0,0,0.7);
+    text-shadow: 2px 2px 10px rgba(0,0,0,0.8);
 }
 
 header p {
@@ -34,8 +66,9 @@ header p {
     color: #ccc;
 }
 
+/* ==== Test Buttons ==== */
 .test-menu {
-    margin: 50px auto;
+    margin: 60px auto;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
     gap: 30px;
@@ -44,50 +77,54 @@ header p {
 }
 
 .test-button {
-    background: linear-gradient(135deg, #ffd700, #e6c200); /* gold */
+    background: linear-gradient(135deg, #ffd700, #e6c200);
     color: #111;
     font-weight: 600;
     font-size: 18px;
     padding: 20px;
     text-decoration: none;
-    border-radius: 12px;
-    box-shadow: 0 6px 15px rgba(0,0,0,0.4);
-    text-align: center;
+    border-radius: 15px;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.6);
     transition: transform 0.3s, box-shadow 0.3s;
+    text-align: center;
 }
 
 .test-button:hover {
-    transform: translateY(-5px) scale(1.02);
-    box-shadow: 0 10px 25px rgba(0,0,0,0.6);
+    transform: translateY(-5px) scale(1.03);
+    box-shadow: 0 12px 30px rgba(0,0,0,0.8);
 }
 
-/* YouTube Button */
+/* ==== YouTube Button ==== */
 .youtube-button {
     display: inline-block;
-    margin: 40px 0;
-    background: linear-gradient(135deg, #c0c0c0, #a9a9a9); /* silver */
+    margin: 50px 0;
+    background: linear-gradient(135deg, #c0c0c0, #a9a9a9);
     color: #111;
     padding: 14px 28px;
-    border-radius: 10px;
+    border-radius: 12px;
     font-weight: bold;
     font-size: 18px;
     text-decoration: none;
     transition: transform 0.3s, box-shadow 0.3s;
+    box-shadow: 0 6px 15px rgba(0,0,0,0.5);
 }
 .youtube-button:hover {
     transform: scale(1.05);
-    box-shadow: 0 8px 25px rgba(0,0,0,0.5);
+    box-shadow: 0 8px 25px rgba(0,0,0,0.7);
 }
 
+/* ==== Footer ==== */
 footer {
-    background-color: #111;
+    background-color: rgba(10, 10, 10, 0.8);
     color: #ccc;
     padding: 15px 0;
     text-align: center;
-    border-top: 2px solid #444;
+    border-top: 1px solid #444;
+    position: relative;
+    z-index: 2;
 }
 
-/* Fade-in animation for menu */
+/* ==== Fade-in Animation ==== */
 .test-menu a {
     opacity: 0;
     animation: fadeIn 0.8s forwards;
