Change background image from logo.jpeg to logo.jpg

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body::before {
     content: "";
     position: fixed;
     top: 0; left: 0; right: 0; bottom: 0;
-    background: url('logo.jpeg') center center/contain no-repeat;
+    background: url('logo.jpg') center center/contain no-repeat;
     opacity: 0.08; /* faint visibility */
     filter: blur(4px);
     z-index: 0;
