--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ header p {
     font-size: 18px;
     text-decoration: none;
     transition: transform 0.3s, box-shadow 0.3s;
-    box-shadow: 0 6px 15px rgba(0,0,0,0.5);
+    box-shadow: 0 6px 15px rgba(255, 0, 0, 0.5);
 }
 .youtube-button:hover {
     transform: scale(1.05);
